--- a/main.html
+++ b/main.html
@@ -8,7 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+	<div>
+		<div>
+			My current favourite song is 
+			<a href="https://www.youtube.com/watch?v=vRIJaQsJts8">&ltSay_My_Name&gt</a>
+		</div>
+	</div>
+    <script type="text/javascript" src="./script.js">cd
 </script>
 
 </body>
